# wwvb-decoder

./: ARCHITECTURE.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt  sync-agents.sh
research/: sdr-property-report.json
research/SDRconnectWebSocketAPI/: SDRconnectWebSocketAPI.sln
research/SDRconnectWebSocketAPI/SDRconnectWebSocketAPI.AudioPlayer/: AudioPlayer.cs  Fifo.cs  Program.cs  SDRconnectWebSocketAPI.AudioPlayer.csproj
research/SDRconnectWebSocketAPI/SDRconnectWebSocketAPI.Client/: SDRconnectProperty.cs  SDRconnectRecording.cs  SDRconnectWebSocketClient.cs  SDRconnectWebSocketMessage.cs  WebSocketClient.cs
research/SDRconnectWebSocketAPI/SDRconnectWebSocketAPI.MinimalExample/: Program.cs  SDRconnectWebSocketAPI.MinimalExample.csproj
research/SDRconnectWebSocketAPI/SDRconnectWebSocketAPI.RawIqWriter/: Program.cs
research/SDRconnectWebSocketAPI/SDRconnectWebSocketAPI.SDRconnectCtl/: Program.cs
research/SDRconnect_WebSocket_JS/: client.css  client.js  index.html
src/wwvb_decode/: __init__.py  __main__.py  cli.py  decoder.py  envelope.py  frame.py  plain.py  sdrconnect.py  state.py  tips.txt  tui.py
src/wwvb_decode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: generate_test_data.py  test_decoder.py  test_envelope.py  test_frame.py  test_state.py
tests/test_data/: README.md
