[project]
name = "wwvb-decode"
version = "0.1.0"
description = "WWVB 60 kHz time station decoder using SDRConnect WebSocket API"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "rich>=13.0",
]

[project.scripts]
wwvb-decode = "wwvb_decode.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wwvb_decode = ["tips.txt"]
